setting up basic note app backbone

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "homepage": "https://github.com/sawheeldon/Sticky#readme",
   "dependencies": {
     "react": "^15.3.2",
+    "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2"
   },
   "devDependencies": {
